--- a/tdiagrams.cabal
+++ b/tdiagrams.cabal
@@ -20,6 +20,18 @@ extra-source-files:    AUTHORS, Makefile, src/CCO/Diag/TypeCheckAG.ag,
                        src/CCO/Diag/AG/Base.ag, src/CCO/Picture/AG.ag,
                        src/CCO/Picture/AG/Base.ag, src/CCO/Diag/AG/Convert.ag,
                        src/CCO/Picture/AG/Printing.ag
+                       doc/design.tex
+data-files:            example1.tdiag
+                       example2.tdiag
+                       example3.tdiag
+                       example4.tdiag
+                       example5.tdiag
+                       example6.tdiag
+                       example7.tdiag
+                       badexample1.tdiag
+                       badexample2.tdiag
+                       badexample3.tdiag
+                       badexample4.tdiag
 
 executable parse-tdiag
   main-is:             ParseTDiag.hs
