--- a/tdiagrams.cabal
+++ b/tdiagrams.cabal
@@ -20,7 +20,7 @@ extra-source-files:    AUTHORS, Makefile, src/CCO/Diag/TypeCheckAG.ag,
                        src/CCO/Diag/AG/Base.ag, src/CCO/Picture/AG.ag,
                        src/CCO/Picture/AG/Base.ag, src/CCO/Diag/AG/Convert.ag,
                        src/CCO/Picture/AG/Printing.ag
-                       doc/design.tex
+                       doc/design.tex, doc/design.pdf
 data-files:            example1.tdiag
                        example2.tdiag
                        example3.tdiag
